def artifactId = 'com.touchbiz.db.starter'

apply plugin: 'maven-publish'
apply plugin: 'java'


sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        credentials {
            username "$mavenUserName"
            password "$mavenPassword"
        }
        url 'https://packages.aliyun.com/maven/repository/2031284-release-KDf3XN/'
    }

    maven { url 'https://repo.spring.io/snapshot' }
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
    implementation group: 'mysql', name: 'mysql-connector-java', version: "${ mysqlVerision }"
    api group: 'org.springframework', name: 'spring-jdbc', version: "${ springVersion }"
    api group: 'org.springframework', name: 'spring-web', version: "${ springVersion }"
    api group: 'com.touchbiz', name: 'common-utils', version: "${ commonVersion }"
    api group: 'com.touchbiz', name: 'common-entity', version: "${ commonEntityVersion }"
    api group: 'commons-beanutils', name: 'commons-beanutils', version: "1.9.4"
    api group: 'com.baomidou', name: 'mybatis-plus-boot-starter', version: "${ mybatisplusVersion }"
    api group: 'com.baomidou', name: 'dynamic-datasource-spring-boot-starter', version: "${ dynamicVersion }"
    api group: 'com.alibaba', name: 'druid-spring-boot-starter', version: "${ druidVersion }"
    api group: 'commons-pool', name: 'commons-pool', version: "${ commonPoolVersion }"
    api group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: "${ mybatisVersion }"
    api group: 'io.projectreactor', name: 'reactor-core', version: "${ reactorVersion }"

    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${ springBootVersion }"
}


